2009-04-25  Mike Kestner  <mkestner@novell.com>

	* generator/OpaqueGen.cs: support declaring managed ifaces.
	[Fixes #494193] Revised patch from Sebastian Dröge.

2009-04-24  Stephane Delcroix  <sdelcroix@novell.com>

	* generator/Ctor.cs: Read the name attribute for constructors
	converted to static factory methods.

2009-04-21  Christian Hoff  <christian_hoff@gmx.net>

	* glib/Value.cs: Fixes for fundamental GType support. Patch
	provided by Sebastian Dröge.

2009-04-21  Christian Hoff  <christian_hoff@gmx.net>

	* gtk/Widget.custom: Deglued implementation of StyleGetProperty.

2009-04-16  Christian Hoff  <christian_hoff@gmx.net>

	* glib/Value.cs: Support for additional fundamental GTypes. Invoke
	constructor of corresponding managed type to convert a GValue into
	its managed representation and a SetGValue method to do that vice
	versa. Patch contributed by Sebastian Dröge.

2009-04-15  Andrés G. Aragoneses  <aaragoneses@novell.com>
 
        * atk/Makefile.am
        * glib/Makefile.am: take advantage of the same InternalsVisibleTo
        because the moon assemblies will be monomerged.

2009-04-15  Andrés G. Aragoneses  <aaragoneses@novell.com>

	* atk/Makefile.am
	* glib/Makefile.am
	* Makefile.include: Added new 'moonlight' target, to build with
	smcs.

2009-04-14  Christian Hoff  <christian_hoff@gmx.net>

	* gtk/Adjustment.custom: Deglued implementation of SetBounds.
	* gtk/glue/Adjustment.c: Kill.

2009-04-13  Christian Hoff  <christian_hoff@gmx.net>

	Add support for virtual methods(vm) to the generator.

	* parser/gapi2xml.pl: Generate a class_struct element with
	all members of the class structure. Dump the first (instance)
	parameter for signal and vm elements. Bump up parser version.
	* generator/GObjectVM.cs: Added. Support for GObject virtual methods.
	* generator/DefaultSignalHandler.cs: Signal specific part of vm
	generation.
	* generator/InterfaceVM.cs: New class for interface vms.
	* generator/ObjectBase.cs: Parse the class struct.
