@@ -1,5 +1,10 @@
 2009-04-25  Mike Kestner  <mkestner@novell.com>
 
+	* parser/gapi-fixup.cs: add remove-attr and change-node-type
+	fixup rules.  [Fixes #494194]
+
+2009-04-25  Mike Kestner  <mkestner@novell.com>
+
 	* generator/OpaqueGen.cs: support declaring managed ifaces.
 	[Fixes #494193] Revised patch from Sebastian Dröge.
 
